--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "heroku-postbuild-x": "npm run build && cd frontend && npm install && npm run build",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix  frontend &&npm run build --prefix frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
